<resources>
    <string name="app_name" translatable="false">oustsdk</string>
    <string name="app_version" translatable="false">0.3.4</string>
    <string name="oust_sdk_version" translatable="false">v2.11.46</string>
    <string name="oust_link" translatable="false">www.oustlabs.com</string>
    <string name="course_share_text" translatable="false">- ready course on Oust App @oustlabs - join me and get placed.</string>
    <string name="zero_by_zero_text" translatable="false">0/0</string>
    <string name="timer" translatable="false">00:</string>
    <string name="zero_zero_colon" translatable="false">00:</string>
    <string name="counterTimer" translatable="false">000</string>
    <string name="stream" translatable="false">Stream</string>
    <string name="org_id">Organization Code</string>
    <string name="user_name">User ID</string>
    <string name="start">Start</string>
    <string name="downloading_resources">Downloading files..</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading Data..</string>
    <string name="zero_text" translatable="false">0</string>
    <string name="see_all">See All</string>
    <string name="zero_percentage" translatable="false">0%</string>
    <string name="xp" translatable="false">XP</string>
    <string name="completed">Completed</string>
    <string name="complete">Complete</string>
    <string name="no_catalogue_available">No data available</string>
    <string name="no_module_yet">No modules have been added yet</string>
    <string name="no_modules_available"> No modules found </string>
    <string name="no_course_assign">No modules found</string>
    <string name="assessment_no_longer">Assessment no longer available</string>
    <string name="fetching_data_msg">Fetching data..</string>
    <string name="credits">Credits</string>
    <string name="my_tasks_text">My Tasks</string>
    <string name="deadline">Deadline</string>
    <string name="read_more">Read More</string>
    <string name="enter_reply_text">Please enter reply</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="confirmation">Confirmation</string>
    <string name="upload_confirm_msg">Do you want to upload the file?</string>
    <string name="upload_complete_text">File Upload Complete</string>
    <string name="media_uploading">Please wait. We are uploading the Attachment.</string>
    <string name="media_upload_completed">File Upload Complete</string>
    <string name="attachment">Attachment</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="pause">Paused</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="upload_success">Successfully Uploaded an Attachment</string>
    <string name="upload_fail_msg">Upload Failed</string>
    <string name="delete_msg">Are you sure want to Delete?</string>
    <string name="delete_confirm">Are you sure want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="congratulations_text">Congratulations,</string>
    <string name="sorry">Sorry</string>
    <string name="cleared_module">You have cleared this module</string>
    <string name="failed_module">You have failed</string>
    <string name="rating">Rating</string>
    <string name="time_taken">Time Taken</string>
    <string name="well_done_text">Well Done</string>
    <string name="done_text">Done</string>
    <string name="module_complete">Module Complete</string>
    <string name="earn_rewards">Earn Rewards</string>
    <string name="oust_share_text">Hi there, Join me on Oust, a new way to learn smarter.</string>
    <string name="no_favourite_card">No favourite Cards</string>
    <string name="alerts">Alerts</string>
    <string name="no_alerts_available">No Alerts available</string>
    <string name="vs_text">VS</string>
    <string name="level">Level</string>
    <string name="levels">Levels</string>
    <string name="card">Card</string>
    <string name="agree_to_terms">I agree to the terms</string>
    <string name="you_have_completed_text">You have completed</string>
    <string name="certificate_email_to">Your certificate has been sent to</string>
    <string name="no_data_contact_admin">No data available</string>
    <string name="term_condition_msg">Accept terms and conditions</string>
    <string name="added_success">Added successfully</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">Try again</string>
    <string name="no_internet_connection">Please check the Internet connection and try again.</string>
    <string name="org_id_invalid">Organization ID is Invalid</string>
    <string name="retry_internet_msg">Please check the Internet connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="restart_msg">Please check the Internet connection and try again.</string>
    <string name="no_data_available">No data available</string>
    <string name="no_data_in_module">No data available</string>
    <string name="no_internet_data">Please check the Internet connection and try again.</string>
    <string name="exit_on_back">Press Back button again to exit</string>
    <string name="invalid_meeting_id">Invalid meeting Id.</string>
    <string name="please_wait">Please wait</string>
    <string name="network_seems_slow">Network seems slow. Please wait..</string>
    <string name="network_seems_slow_wait">Network seems slow. Thanks for your patience. Please wait..</string>
    <string name="please_check_your_internet_connection">Please check the Internet connection and try again.</string>
    <string name="unable_to_fetch_data">Unable to fetch data. Please check your internet connection and try again.</string>
    <string name="error_message">Something went wrong</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="sorry_media_upload_failed">Sorry. Your media upload has failed</string>
    <string name="no_data_found">No data available</string>
    <string name="recording_started">Recording started</string>
    <string name="unable_fetch_connection_error">Unable to fetch data. Please check your internet connection and try again.</string>
    <string name="file_complete_msg">File Upload Complete</string>
    <string name="please_enter_response">Please enter your response</string>
    <string name="invalid_response">Invalid format of response</string>
    <string name="not_able_load_module">Not able to load the Module data</string>
    <string name="problem_loading_module">Problem on loading the Module</string>
    <string name="server_error_no_qstn">Oops! No questions found for this module</string>
    <string name="downloading_files">Downloading files..</string>
    <string name="failed_download_language">Failed to download Language file.</string>
    <string name="type_here">Type here…</string>
    <string name="see_text">See All</string>
    <string name="new_word_jumble_available">New word jumble available</string>
    <string name="text_continue">Continue</string>
    <string name="complete_your_pending_modules">Complete your pending modules</string>
    <string name="credits_text">(credits)</string>
    <string name="my_progress">My Progress</string>
    <string name="pending_text">Pending</string>
    <string name="pending_modules_text">Pending Modules</string>
    <string name="completed_modules_text">Completed Modules</string>
    <string name="refresh">Refresh</string>
    <string name="my_feeds">My Feeds</string>
    <string name="courses_text">Courses</string>
    <string name="challenges_text">Challenges</string>
    <string name="filter_text">Filter</string>
    <string name="no_feeds_available">No feeds available</string>
    <string name="no_feed_found">No feeds found</string>
    <string name="no_feed_assigned">No feeds found</string>
    <string name="no_playlist_available">No data available</string>
    <string name="learning_credit_text">Learning Credits</string>
    <string name="learn">Learn</string>
    <string name="play_text">Play</string>
    <string name="latest_skills">Latest Skills</string>
    <string name="catalogue_label">Catalogue</string>
    <string name="view_all_text">View All</string>
    <string name="grow">Grow</string>
    <string name="to_do">TO DO</string>
    <string name="play_list">Play List</string>
    <string name="my_desk_text">My Desk</string>
    <string name="latest">Latest</string>
    <string name="trending">Trending</string>
    <string name="clear_all">Clear All</string>
    <string name="apply_filter">Apply filter</string>
    <string name="search_text">Search…</string>
    <string name="landing_heading" translatable="false">OUST</string>
    <string name="leader_board_title">Leaderboard</string>
    <string name="join_meeting">Join Meeting</string>
    <string name="module_challenge_friend">Select this module and start challenging friends or mystery opponents.</string>
    <string name="challenge_mystery">Challenge Mystery</string>
    <string name="challenge_friend">Challenge Friend</string>
    <string name="moduleSubjectTxt">Subject : </string>
    <string name="moduleGradeTxt">Grade : </string>
    <string name="moduleExamTxt">Exam : </string>
    <string name="moduleVendorTxt">Vendor : </string>
    <string name="add_skills_start">Add Skills to get started</string>
    <string name="notice_board">Noticeboard</string>
    <string name="no_assessment_assigned">No Assessment are found</string>
    <string name="no_topics_available">No data available</string>
    <string name="no_match_found">No Match Found</string>
    <string name="profile_text">Profile</string>
    <string name="history">History</string>
    <string name="my_assessment">My Assessments</string>
    <string name="favourites">Favourites</string>
    <string name="my_diary">My Diary</string>
    <string name="badges">Badges</string>
    <string name="my_catalogue">My Catalogue</string>
    <string name="contests">Contests</string>
    <string name="analytics">Analytics</string>
    <string name="faq">FAQ</string>
    <string name="feedback_text">Feedback</string>
    <string name="help_support">Help/Support</string>
    <string name="rate_the_appText">Rate The App</string>
    <string-array name="settings">
        <item>General</item>
        <item>Notifications</item>
        <item>Sounds</item>
        <item>Privacy</item>
    </string-array>
    <string name="comment_text">Comment</string>
    <string name="calendar_text">Calendar</string>
    <string name="month_text">Month</string>
    <string name="m_text" translatable="false">M</string>
    <string name="t_text" translatable="false">T</string>
    <string name="w_text" translatable="false">W</string>
    <string name="f_text" translatable="false">F</string>
    <string name="s_text" translatable="false">S</string>
    <string name="submit">Submit</string>
    <string name="record_video_text">Click to Record Video</string>
    <string name="alertType">ALERT</string>
    <string name="status">Status</string>
    <string name="course_completd">Courses completed:</string>
    <string name="course_submitted">Courses not submitted:</string>
    <string name="search_menu_text">Search</string>
    <string name="sinsle_session_msg">You have already logged in from another device. Do you want to continue?</string>
    <string name="sinsle_session_note">*If you select YES, then the other session will be terminated.</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="certificate">Certificates</string>
    <string name="exit_txt">Exit</string>
    <string name="end_call">End Call</string>
    <string name="are_you_sure_you_want_to_exit_session">Are you sure you want to exit the session?</string>
</resources>