<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">



    <com.oustme.oustsdk.customviews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="@dimen/ousttext_dimen20"
        android:layout_marginTop="@dimen/oustlayout_dimen32"
        android:text="@string/alertType" />

    <ImageView
        android:id="@+id/imageViewUploadIcon"
        android:layout_width="@dimen/oustlayout_dimen80"
        android:layout_height="@dimen/oustlayout_dimen80"
        android:layout_marginTop="@dimen/oustlayout_dimen8"
        android:src="@drawable/ic_exclamation_alert" />

    <com.oustme.oustsdk.customviews.CustomTextView
        android:id="@+id/textViewSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/common_grey"
        android:textSize="@dimen/ousttext_dimen18"
        android:layout_marginStart="@dimen/oustlayout_dimen12"
        android:layout_marginLeft="@dimen/oustlayout_dimen12"
        android:layout_marginRight="@dimen/oustlayout_dimen12"
        android:layout_marginEnd="@dimen/oustlayout_dimen12"
        android:layout_marginTop="@dimen/oustlayout_dimen8"
        android:text="@string/sinsle_session_msg" />

    <com.oustme.oustsdk.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/ousttext_dimen14"
        android:layout_marginTop="@dimen/oustlayout_dimen8"
        android:layout_marginStart="@dimen/oustlayout_dimen12"
        android:layout_marginLeft="@dimen/oustlayout_dimen12"
        android:layout_marginEnd="@dimen/oustlayout_dimen12"
        android:layout_marginRight="@dimen/oustlayout_dimen12"
        android:textColor="@color/light_grey_new"
        android:text="@string/sinsle_session_note" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/oustlayout_dimen8"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/linearLayoutNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:gravity="center"
            android:background="@color/Orange">
            <com.oustme.oustsdk.customviews.CustomTextView
                android:id="@+id/textViewOriginal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/whitea"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/oustlayout_dimen12"
                android:layout_marginBottom="@dimen/oustlayout_dimen12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:gravity="center"
            android:layout_marginLeft="1dp"
            android:background="@color/lgreen"
            android:layout_marginStart="1dp">
            <com.oustme.oustsdk.customviews.CustomTextView
                android:id="@+id/textViewCompress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textColor="@color/whitea"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/oustlayout_dimen8"
                android:layout_marginStart="@dimen/oustlayout_dimen8"
                android:layout_marginTop="@dimen/oustlayout_dimen12"
                android:layout_marginBottom="@dimen/oustlayout_dimen12" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
