<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/black_overlay"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_rounded_corner"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/select_from_gallery"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/select_from_gallery"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textBlack"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/record_video"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/record_video_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textBlack"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/cancel_dialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/cancel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textBlack"
            android:textSize="17sp" />



    </LinearLayout>
</LinearLayout>
