<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendar_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/previous_month"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_calendar_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="#B7B7B7"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/next_month"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_calendar_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="#B7B7B7"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/previous_month"
            app:layout_constraintRight_toLeftOf="@id/next_month"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/month_text"
                android:textColor="#B7B7B7"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/month_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/month_text"
                android:textStyle="bold"
                android:textColor="@color/LiteGreen"
                android:textSize="15sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/day_name_lay"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/m_text"
            android:textColor="@color/calendar_day_name"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/t_text"
            android:textColor="@color/calendar_day_name"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/w_text"
            android:textColor="@color/calendar_day_name"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/t_text"
            android:textColor="@color/calendar_day_name"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/f_text"
            android:textColor="@color/calendar_day_name"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/saturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/s_text"
            android:textColor="@color/calendar_day_name"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/s_text"
            android:textColor="@color/calendar_day_name"
            android:textSize="12sp" />


    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.oustme.oustsdk.calendar_ui.custom.OustCalendarVP
            android:id="@+id/calendar_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

    </ScrollView>

</LinearLayout>
